--- a/index.html
+++ b/index.html
@@ -27,24 +27,22 @@
     <!-- HOME -->
     <section class="home" id="home">
         <header>
-            <h2>Fahri Prasetya</h2>
+            <h2>Muhammad Aldy Rasya Faturohman</h2>
             <ul class="">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About me</a></li>
-                <li><a href="#skill">Skill</a></li>
                 <li><a href="#project">Project</a></li>
-                <li><a href="#certification">Certification</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <i class="fa-solid fa-bars fa-2x hamburger-menu"></i>
         </header>
         <div class="section-home">
             <div class="field-text-home">
-                <h1>Hii, I am <br> <span>Fahri Prasetya</span></h1>
-                <h3>Front End Developer <span>| Information System Student </span></h3>
+                <h1>Hii, I am <br> <span>Muhammad Aldy Rasya Faturohman</span></h1>
+                <h3>Student SMK SMTI YOGYAKARTA <span>| Mechatronics</span></h3>
             </div>
             <div class="field-image-home">
-                <img src="img/myphoto.png" alt="">
+                <img src="img/myphoto.jpg" alt="">
             </div>
         </div>
         <a class="swipe-up" href="#about">Swipe Up <i class="fa-solid fa-arrow-down arrow-swipeup"></i></a>
@@ -55,21 +53,14 @@
     <section class="about" id="about">
         <div class="container-about" data-aos="fade-up" data-aos-duration="1500">
             <h1>About <span>Me</span></h1>
-            <p>I am a 2nd semester student at bina sarana informatika university majoring in information systems. For
-                now I live in Bogor city, West Java province. I am a person who likes to learn and has a high curiosity,
-                especially in the field of technology. My journey in the world of technology is driven by curiosity and
-                the urge to continue to improve my abilities. Until finally, I found one of the fun parts of technology
-                which is web development.</p>
-            <p>I have taken several courses and also completed several projects that must be
-                completed in the course related to web development and also databases. I am eager to explore innovative
-                solutions and contribute to impactful projects. As my studies progress, I am excited to connect with
-                professionals in the industry and expand my knowledge in web development and beyond.</p>
+            <p>I am Muhammad Aldy Rasya Faturohman, usually called Rasya or Aldy. I was born on March 27 2007 in Bantul. I am currently a student at SMK SMTI YOGYAKARTA majoring in Mechatronics, and I graduate in 2026. I live in Imogiri, Bantul, Yogyakarta. And I am the first child.</p>
+            <p>I like doing activities/practices that run in the field of programming and mechanics, I am also quite proficient in the field of PLC programming.</p>
         </div>
     </section>
     <!-- ABOUT -->
 
     <!-- SKILLS -->
-    <section class="skill" id="skill">
+    <!--     <section class="skill" id="skill">
         <h1>My <span>Skills</span></h1>
         <div class="container-image-skill">
             <div class="field-image-skill" data-aos="flip-left">
@@ -106,6 +97,7 @@
             </div>
         </div>
     </section>
+ -->
     <!--SKILLS -->
 
     <!-- PROJECT -->
@@ -115,124 +107,57 @@
         <div class="container-project">
 
             <div class="field-project">
-                <a href="" class="link-to-project">
-                    <img src="img/project_webcoffee.png" alt="">
+                <a href="https://drive.google.com/drive/folders/YOUR_DRIVE_FOLDER_ID" class="link-to-project" target="_blank">
+                    <img src="img/draw.png" alt="">
                     <div class="field-text-project">
-                        <h3>Sunday Coffee <span>Promotion Landing Page</span></h3>
-                        <p class="description-project">Create a landing page for promotional and introduce the
-                            products owned by sunday coffee. Also create a feature to order products.</p>
+                        <h3>Engineering Drawings<span> Make An Object 3D</span></h3>
+                        <p class="description-project">Make an object in 3D as described by the teacher</p>
                     </div>
                 </a>
-                <div class="technology-project">
-                    <a href="">HTML</a>
-                    <a href="">CSS</a>
-                    <a href="">Bootstrap</a>
-                </div>
+            </div>
+
+
+
+
+            <div class="field-project">
+                <a href="https://drive.google.com/drive/folders/YOUR_DRIVE_FOLDER_ID" class="link-to-project" target="_blank">
+                    <img src="img/listrik.jpg" alt="">
+                    <div class="field-text-project">
+                        <h3>Electrical Circuits<span> Motor 3 phase</span></h3>
+                        <p class="description-project">Making a 3 phase star and delta electric motor circuit</p>
+                    </div>
+                </a>
             </div>
 
 
 
             <div class="field-project">
-                <a href="" class="link-to-project">
-                    <img src="img/project_websekolah.png" alt="">
+                <a href="https://drive.google.com/drive/folders/YOUR_DRIVE_FOLDER_ID" class="link-to-project" target="_blank">
+                    <img src="img/DevC.png" alt="">
                     <div class="field-text-project">
-                        <h3>SMK Dharma Bakti <span>Registration Form</span></h3>
-                        <p class="description-project">Create web information about SMK Dharma Bakti and create a
-                            registration feature that directly outputs student data inputted using php</p>
+                        <h3>Program C++<span> Multiples Of Numbers</span></h3>
+                        <p class="description-project">Create a program that can calculate multiplication automatically from multiplication 0 to multiplication 4t</p>
                     </div>
                 </a>
-                <div class="technology-project">
-                    <a href="">HTML</a>
-                    <a href="">CSS</a>
-                    <a href="">PHP</a>
-                </div>
-            </div>
-
-
-
-            <div class="field-project">
-                <a href="" class="link-to-project">
-                    <img src="img/project_webbuku.png" alt="">
-                    <div class="field-text-project">
-                        <h3>Bookshelf <span>Apps</span></h3>
-                        <p class="description-project">Create a bookshelf application that functions to monitor books
-                            that
-                            have not been read or books that have been read and add a book search feature in the
-                            bookshelf
-                            list.</p>
-                    </div>
-                </a>
-                <div class="technology-project">
-                    <a href="">HTML</a>
-                    <a href="">CSS</a>
-                    <a href="">JavaScript</a>
-                    <a href="">Web Storage</a>
-                </div>
-            </div>
-
-
-
-            <div class="field-project">
-                <a href="https://fahriprasetya.github.io/ToDoList.github.io/" class="link-to-project">
-                    <img src="img/project_todolist.png" alt="">
-                    <div class="field-text-project">
-                        <h3>To Do List <span>Web Apps</span></h3>
-                        <p class="description-project">Create a to do list web application that functions to add tasks
-                            that
-                            you want to complete through user input. and has a feature to move or delete the task to
-                            another
-                            section if the task has been completed</p>
-                    </div>
-                </a>
-                <div class="technology-project">
-                    <a href="">HTML</a>
-                    <a href="">CSS</a>
-                    <a href="">JavaScript</a>
-                    <a href="">Web Storage</a>
-                </div>
             </div>
 
 
             <div class="field-project">
-                <a href="" class="link-to-project">
-                    <img src="img/project_websosmed.png" alt="">
+                <a href="https://drive.google.com/drive/folders/YOUR_DRIVE_FOLDER_ID" class="link-to-project" target="_blank">
+                    <img src="img/other.jpg" alt="">
                     <div class="field-text-project">
-                        <h3>My Social <span>Media Website</span></h3>
-                        <p class="description-project">Create a website that contains profile and information that has
-                            links
-                            to direct to my social media</p>
+                        <h3>Other Project<span></span></h3>
+                        <p class="description-project">Another project that I made</p>
                     </div>
                 </a>
-                <div class="technology-project">
-                    <a href="">HTML</a>
-                    <a href="">CSS</a>
-                    <a href="">JavaScript</a>
-                </div>
             </div>
 
-
-
-            <div class="field-project">
-                <a href="" class="link-to-project">
-                    <img src="img/project_webdigitalent.png" alt="">
-                    <div class="field-text-project">
-                        <h3>Slicing UI <span>Web Digitalent Kominfo</span></h3>
-                        <p class="description-project">Duplicating one part of the Kominfo Digitalent website to hone my
-                            skills and test my practical abilities in using html and css</p>
-                    </div>
-                </a>
-                <div class="technology-project">
-                    <a href="">HTML</a>
-                    <a href="">CSS</a>
-                </div>
-            </div>
-
-
-        </div>
+</div>
     </section>
     <!-- PROJECT -->
 
-    <!--Cerfitication -->
+<!--Cerfitication -->
+    <!--     
     <section class="certification" id="certification">
         <h1>Certi<span>fication</span></h1>
         <div class="container-certificate">
@@ -342,7 +267,8 @@
             </div>
         </div>
     </section>
-    <!--Certification -->
+-->
+    <!--Certification --> 
 
     <!-- CONTACT -->
     <section class="contact" id="contact">
@@ -351,38 +277,34 @@
             <div class="sosmed-and-maps">
                 <div class="domain-and-contact">
                     <div class="domain-contact phone">
-                        <a href="https://wa.me/6289657341686/?text=Halo%20saya%20tertarik%20melihat%20portofolio%20Anda%20bisakah%20kita%20bekerja%20sama%3F"
+                        <a href="https://wa.me/62859138566428"
                             target="_blank"><i class="fa-solid fa-mobile-screen icon-domain-and-contact fa-2x"></i></a>
-                        <a href="https://wa.me/6289657341686/?text=Halo%20saya%20tertarik%20melihat%20portofolio%20Anda%20bisakah%20kita%20bekerja%20sama%3F"
-                            target="_blank"><span>+62
-                                89657</span>341686</a>
+                        <a href="https://wa.me/62859138566428"
+                            target="_blank"><span>+62 </span>8591  3856 6428</a>
                     </div>
                     <div class="domain-contact house">
                         <a
-                            href="https://www.google.com/maps/place/Jl.+RH+Panji+No.90,+Bojonggede,+Kecamatan+Bojonggede,+Kabupaten+Bogor,+Jawa+Barat+16922/@-6.4889095,106.7936265,17z/data=!3m1!4b1!4m6!3m5!1s0x2e69c37ff31870d7:0x6cd3fcb1f05cfff!8m2!3d-6.4889095!4d106.7962014!16s%2Fg%2F11js3clmr9?entry=ttu&g_ep=EgoyMDI0MDkwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i
+                            href="https://maps.google.com/maps?width=600&amp;height=500&amp;hl=en&amp;q=BETTA BEJO, Imogiri, Bantul&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" target="_blank"><i
                                 class="fa-solid fa-location-dot icon-domain-and-contact fa-2x"></i></a>
                         <a
-                            href="https://www.google.com/maps/place/Jl.+RH+Panji+No.90,+Bojonggede,+Kecamatan+Bojonggede,+Kabupaten+Bogor,+Jawa+Barat+16922/@-6.4889095,106.7936265,17z/data=!3m1!4b1!4m6!3m5!1s0x2e69c37ff31870d7:0x6cd3fcb1f05cfff!8m2!3d-6.4889095!4d106.7962014!16s%2Fg%2F11js3clmr9?entry=ttu&g_ep=EgoyMDI0MDkwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank"><span>JL
-                                RH Panji</span> Bojonggede Bogor</a>
+                            href="https://maps.app.goo.gl/oLd9Qb52RnU7siVx6?g_st=ac" target="_blank"><span>Imogiri</span>, Bantul, Yogyakarta</a>
                     </div>
                     <div class="domain-contact email">
-                        <a href="mailto:fhriprasetyaa@gmail.com" target="_blank"><i
+                        <a href="mailto:muhammadrasya075@gmail.com" target="_blank"><i
                                 class="fa-regular fa-envelope icon-domain-and-contact fa-2x"></i></a>
-                        <a href="mailto:fhriprasetyaa@gmail.com" target="_blank"><span>fhriprasetyaa</span>@gmail.com</a>
+                        <a href="mailto:muhammadrasya075@gmail.com" target="_blank"><span>muhammadrasya075</span>@gmail.com</a>
+                    </div>
+                    <div class="domain-contact linkedin">
+                        <a href="https://www.linkedin.com/in/muhaldy/m" target="_blank"><i
+                                class="fa-brands fa-linkedin fa-2x"></i></a>
+                        <a href="https://www.linkedin.com/in/muhaldy/" target="_blank"><span>muhaldy</span></a>
                     </div>
                 </div>
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.258544094225!2d106.79362647475291!3d-6.488909493503098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c37ff31870d7%3A0x6cd3fcb1f05cfff!2sJl.%20RH%20Panji%20No.90%2C%20Bojonggede%2C%20Kecamatan%20Bojonggede%2C%20Kabupaten%20Bogor%2C%20Jawa%20Barat%2016922!5e0!3m2!1sid!2sid!4v1724393633408!5m2!1sid!2sid"
+                    src="https://maps.google.com/maps?width=600&amp;height=500&amp;hl=en&amp;q=BETTA BEJO, Imogiri, Bantul&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" class="location-map"></iframe>
-                <div class="social-media">
-                    <a href="https://www.linkedin.com/in/fahriprasetya/" target="_blank"><i
-                            class="fa-brands fa-linkedin fa-2x"></i></a>
-                    <a href="https://tiktok.com/@prasetyaaz_" target="_blank"><i
-                            class="fa-brands fa-tiktok fa-2x"></i></a>
-                    <a href="https://www.instagram.com/prasetyaaz_/" target="_blank"><i
-                            class="fa-brands fa-instagram fa-2x"></i></a>
-                </div>
+
             </div>
 
             <div class="form-message">
