--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <section class="about" id="about">
         <div class="container-about" data-aos="fade-up" data-aos-duration="1500">
             <h1>About <span>Me</span></h1>
-            <p>I am Muhammad Aldy Rasya Faturohman, usually called Rasya or Aldy. I was born on March 27 2007 in Bantul. I am currently a student at SMK SMTI YOGYAKARTA majoring in Mechatronics, and I graduate in 2026. I live in Imogiri, Bantul, Yogyakarta. And I am the first child.</p>
-            <p>I like doing activities/practices that run in the field of programming and mechanics, I am also quite proficient in the field of PLC programming.</p>
+            <p>I am Muhammad Aldy Rasya Faturohman, commonly known as Rasya or Aldy. Born on March 27, 2007, in Bantul, I am currently a student at SMK SMTI Yogyakarta, majoring in Mechatronics, and I am expected to graduate in 2026. I reside in Imogiri, Bantul, Yogyakarta, and I am the eldest child in my family.</p>
+            <p>I am passionate about hands-on activities and practical applications related to programming and mechanics. My skills include PLC programming, where I have gained considerable proficiency through both academic and personal projects. I am constantly eager to enhance my knowledge and expertise in this field, driven by my commitment to continuous learning and problem-solving.</p>
         </div>
     </section>
     <!-- ABOUT -->
