--- a/index.html
+++ b/index.html
@@ -53,8 +53,15 @@
     <section class="about" id="about">
         <div class="container-about" data-aos="fade-up" data-aos-duration="1500">
             <h1>About <span>Me</span></h1>
-            <p>I am Muhammad Aldy Rasya Faturohman, commonly known as Rasya or Aldy. Born on March 27, 2007, in Bantul, I am currently a student at SMK SMTI Yogyakarta, majoring in Mechatronics, and I am expected to graduate in 2026. I reside in Imogiri, Bantul, Yogyakarta, and I am the eldest child in my family.</p>
-            <p>I am passionate about hands-on activities and practical applications related to programming and mechanics. My skills include PLC programming, where I have gained considerable proficiency through both academic and personal projects. I am constantly eager to enhance my knowledge and expertise in this field, driven by my commitment to continuous learning and problem-solving.</p>
+            <p>I am Muhammad Aldy Rasya Faturohman, also known as Rasya or Aldy. Born on March 27, 2007, in Bantul, I am currently a student at SMK SMTI Yogyakarta, specializing in Mechatronics, with an expected graduation in 2026. I reside in Imogiri, Bantul, Yogyakarta, and I am the eldest child in my family.</p>
+            <p>I am passionate about combining theoretical knowledge with practical applications, especially in the fields of programming, mechanics, and engineering. My technical skills include:</p>
+            <li>PLC Programming: Proficient in designing and implementing automated systems, both academically and in personal projects.</li>
+            <li>3D Drafting and Drawing: Skilled in creating precise technical drawings and 3D models using CAD software.</li>
+            <li>Electrical Wiring: Competent in planning and executing electrical installations, including panel assembly and wiring diagrams.</li>
+            <li>Welding: Experienced in basic welding techniques, ensuring structural integrity and precision.</li>
+            <li>Mechanical Maintenance: Hands-on experience with troubleshooting and repairing mechanical components.</li>
+            <li>Team Collaboration: Effective in working as part of a team to achieve project goals, with strong problem-solving skills.</li>
+            <p>I am a dedicated learner, constantly seeking opportunities to enhance my skills and knowledge in mechatronics and related fields. My goal is to apply my technical abilities and passion for innovation to make a meaningful impact in the engineering industry.</p>
         </div>
     </section>
     <!-- ABOUT -->
