--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
                 <li>Electrical Wiring: Competent in planning and executing electrical installations, including panel assembly and wiring diagrams.</li>
                 <li>Welding: Experienced in basic welding techniques, ensuring structural integrity and precision.</li>
                 <li>Mechanical Maintenance: Hands-on experience with troubleshooting and repairing mechanical components.</li>
-                <li>Team Collaboration: Effective in working as part of a team to achieve project goals, with strong problem-solving skills.</li>
+                <li>Team Collaboration: Effective in working as part of a team to achieve project goals, with strong problem-solving skills.</li><br>
             </p>
-            <p></p>
             <p>I am a dedicated learner, constantly seeking opportunities to enhance my skills and knowledge in mechatronics and related fields. My goal is to apply my technical abilities and passion for innovation to make a meaningful impact in the engineering industry.</p>
         </div>
     </section>
