--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h3>Student SMK SMTI YOGYAKARTA <span>| Mechatronics</span></h3>
             </div>
             <div class="field-image-home">
-                <img src="img/myphoto.jpg" alt="">
+                <img src="img/1694494600058.jpg" alt="">
             </div>
         </div>
         <a class="swipe-up" href="#about">Swipe Up <i class="fa-solid fa-arrow-down arrow-swipeup"></i></a>
